Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-34741

mariadb-import occasionally fails with "Table 'child' was not locked"

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q3/2025 Maintenance

    Description

      Full error message : Table 'child' was not locked with LOCK TABLES, when using table: parent

      example

       
      CURRENT_TEST: main.mariadb-import
      /usr/bin/mariadb-import: Error: 1100, Table 'child' was not locked with LOCK TABLES, when using table: parent
      mysqltest: At line 60: exec of '/usr/bin/mariadb-import --defaults-file=/dev/shm/var/3/my.cnf --local --silent --dir /dev/shm/var/3/tmp/dump --database=db2 --parallel=2' failed, error: 256, status: 1, errno: 11
      Output from before failure:
      drop database db2;
      
      

      Tables "child" has foreign key in "parent". The load of both tables can happen in parallel. foreign_key_checks is 0. It is not clear why it fails.

      Both tables are locked using LOCK TABLE .. WRITE. this LOCK serves no real purpose, it was an attempt to optimize something for innodb bulk, and this attempt was abandoned due to MDEV-34703

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1h
                  1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.